assets/css/style.css
a {
    color: white;
    text-decoration: none;
    text-decoration-line: underline;
}

a::before,
a::after,
a:hover {
    color: white;
    text-decoration: none;
}

.section {
    text-align:center;
    font-size: 3em;
    padding-top: 125px;
    padding-bottom: 150px;
    overflow: hidden;
}

.call-out {
    position: absolute;
    bottom: -120px;
}

.title {
    position: relative;
    top: 250px;
}

img.hero {
    width: 100%;
    position: relative;
    bottom: 180px;
    left: 300px;
}

h1 {
    color: white;
    font-size: 4.5em;
    position: absolute;
    z-index: 1;
    text-shadow: 1px 5px 20px slategray;
    font-family: 'Staatliches', cursive;
}

p.subhead {
    color: white;
    position: absolute;
    font-size: .25em !important;
    letter-spacing: 2px;
    z-index: 1;
    text-shadow: 1px 5px 20px slategray;
    top: 225px;
}

p {
    font-size: 12px;
}

h2 {
    color: darkslategrey;
}

h6 {
    text-align: left;
    margin-left: -20px;
    font-size: 14px;
}

#sec1 {
    background-image: url('../img/mainsec.jpg');
    background-attachment: fixed;
    background-size: cover;
}

#sec2 {
    background-image: url('../img/sec1.jpg');
    background-attachment: fixed;
    background-size: cover;
}

.home-card {
    position: absolute;
    bottom:0;
    width: 75%;
}  

/* Trending card formatting */

#trending-movies {
    position: relative;
    top: 150px;
    padding-left: 15px;
}

#trending-title {
    text-align: left;
}

#trending {
    position: relative;
    top: 10px;
    margin-bottom: 100px;
}

.trending-row {
    margin: 0;
}

#trending-title {
    color: lightgray;
    text-shadow: 1px 5px 20px slategray;
    font-family: 'Staatliches', cursive;
}

.trending-card {
    margin-left: 10px !important;
    margin-right: 10px !important;
    min-width: 210px;
    height: 113px;
}

#trending-0 {
    margin-left: 2px !important;
}

#trending-3 {
    margin-right: 0 !important;
 }

 .trend-card-title {
    text-align: left;
 }

 img.movie-poster {
     width: 75px;
     margin-top: -1px;
     margin-bottom: -1px;
     margin-left: -20px;
     border-radius: 5px 0 0 5px;
 }

 /* Search Results card formatting */

#search-results {
    position: relative;
    top: 0px;
    padding: 15px;
}

.search-title {
    text-align: center;
    color: black;
    text-shadow: 1px 5px 20px slategray;
    font-family: 'Staatliches', cursive;
}

a.search-card {
    text-align: center;
    font-size: large;
    color: black !important;
    text-shadow: 1px 5px 20px slategray;
    font-family: 'Staatliches', cursive;
    margin:0 !important;
}

a.search-card:hover {
    text-align: center;
    font-size: large;
    color: white !important;
    background-color: #706efd;
    text-shadow: 1px 5px 20px slategray;
    font-family: 'Staatliches', cursive;
    margin:0 !important;
}

#recommendations {
    position: relative;
    top: 50px;
    margin-left:auto;
    margin-right:auto;
}

.search-card {
    margin-top: 0px !important;
    margin-left: 30px !important;
    margin-right: 30px !important;
    min-width: 210px;
}

img.search-movie-poster  {
    width: 200px;
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: auto;
    margin-right:auto;
    border-radius: 5px 5px 5px 5px;
}

 @media only screen and (max-width: 812px) {

    .home-card {
        position: absolute;
        bottom: 20px;
        width: 90%;
    }
    
    #recommendations {
        top: -50px;
        margin-bottom: 20%;
    }

    .search-card {
        margin-top: 0px !important;
        margin-top: 50px !important;
        margin-left: 50px !important;
        margin-right: 50px !important;
        min-width: 200px;
        padding: 5px;
    }

 }
 
 @media only screen and (max-width: 375px) {

    .home-card {
        position: absolute;
        bottom: 30px;
        width: 100%;
    }

    #recommendations {
        top: 0px;
        margin-bottom: 55%;
        margin-left:auto;
        margin-right:auto;
    }

 }

